added V3 with ZSTD compression
Signed-off-by: Alex Kehayov <aleks.kehayov@limechain.tech>